--- a/_posts/2017-08-07-toolkit.markdown
+++ b/_posts/2017-08-07-toolkit.markdown
@@ -8,3 +8,4 @@ tags: [toolkit]
 
 
 Emmet - plugin which greatly improves html & css workflow
+Augury - google chrome extension for debugging Angular apps
