--- a/_posts/2019-01-31-node-js.markdown
+++ b/_posts/2019-01-31-node-js.markdown
@@ -72,7 +72,7 @@ const server = http.createServer((req, res) => {
             fs.readFile(`${__dirname}/templates/template-card.html`, 'utf-8', (err, data) => {
             
                 const cardsOutput = laptopData.map(el => replaceTemplate(data, el)).join('');
-                overviewOutput = overviewOutput.replace('{%CARDS%}', cardsOutput); 
+                overviewOutput = overviewOutput.replace('%CARDS%', cardsOutput); 
                 
                 res.end(overviewOutput);
             });
@@ -113,15 +113,15 @@ server.listen(1337, '127.0.0.1', () => {
 });
 
 function replaceTemplate(originalHtml, laptop) {
-    let output = originalHtml.replace(/{%PRODUCTNAME%}/g, laptop.productName);
-    output = output.replace(/{%IMAGE%}/g, laptop.image);
-    output = output.replace(/{%PRICE%}/g, laptop.price);
-    output = output.replace(/{%SCREEN%}/g, laptop.screen);
-    output = output.replace(/{%CPU%}/g, laptop.cpu);
-    output = output.replace(/{%STORAGE%}/g, laptop.storage);
-    output = output.replace(/{%RAM%}/g, laptop.ram);
-    output = output.replace(/{%DESCRIPTION%}/g, laptop.description);
-    output = output.replace(/{%ID%}/g, laptop.id);
+    let output = originalHtml.replace(/%PRODUCTNAME%/g, laptop.productName);
+    output = output.replace(/%IMAGE%/g, laptop.image);
+    output = output.replace(/%PRICE%/g, laptop.price);
+    output = output.replace(/%SCREEN%/g, laptop.screen);
+    output = output.replace(/%CPU%/g, laptop.cpu);
+    output = output.replace(/%STORAGE%/g, laptop.storage);
+    output = output.replace(/%RAM%/g, laptop.ram);
+    output = output.replace(/%DESCRIPTION%/g, laptop.description);
+    output = output.replace(/%ID%/g, laptop.id);
     return output;
 }
 {% endhighlight %}
