--- a/_posts/2019-03-28-react-jsx.markdown
+++ b/_posts/2019-03-28-react-jsx.markdown
@@ -6,7 +6,7 @@ category: react
 tags: [react, jsx]
 ---
 
-{% highlight html %}
+{% highlight javscript %}
 //HTML
 <div style="background-color: red;"></div>
 
